[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Bad_Guys/BG-20-Turret-Ground.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Projectiles/BadGuy/Proj-BG-10-Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Explosions/Ex-03-Pawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Bad_Guys/BG-20-Turret-Ground.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Shoot_0"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 10, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shoot_1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 11, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot_2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 12, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot_3"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 13, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot_4"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 24, 14, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shoot_5"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 25, 15, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shoot_6"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 26, 16, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Shoot_7"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 17, 7 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Shoot_8"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 28, 18, 8 ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 14.9743
height = 8.00916

[sub_resource type="Animation" id=11]
resource_name = "Hit-Orange"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 36, 32, 9 ]
}

[node name="BG-20-Turret-Ground" type="StaticBody2D" groups=[
"hittable",
"badguy",
]]
collision_layer = 2048
collision_mask = 655874
script = ExtResource( 1 )
projectile = ExtResource( 2 )
explode = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 4 )
vframes = 4
hframes = 10
frame = 9

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 4 )
vframes = 4
hframes = 10
frame = 8

[node name="Casts" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="Shoot-Cast-0" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 2

[node name="Shoot-Cast-1" type="RayCast2D" parent="Casts"]
position = Vector2( -5, -17 )
enabled = true
cast_to = Vector2( -190, -81 )
collision_mask = 2

[node name="Shoot-Cast-2" type="RayCast2D" parent="Casts"]
position = Vector2( -5, -17 )
enabled = true
cast_to = Vector2( -150, -150 )
collision_mask = 2

[node name="Shoot-Cast-3" type="RayCast2D" parent="Casts"]
position = Vector2( -3, -17 )
enabled = true
cast_to = Vector2( -70, -180 )
collision_mask = 2

[node name="Shoot-Cast-4" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 0, -200 )
collision_mask = 2

[node name="Shoot-Cast-5" type="RayCast2D" parent="Casts"]
position = Vector2( 3, -17 )
enabled = true
cast_to = Vector2( 70, -180 )
collision_mask = 2

[node name="Shoot-Cast-6" type="RayCast2D" parent="Casts"]
position = Vector2( 5, -17 )
enabled = true
cast_to = Vector2( 150, -150 )
collision_mask = 2

[node name="Shoot-Cast-7" type="RayCast2D" parent="Casts"]
position = Vector2( 5, -17 )
enabled = true
cast_to = Vector2( 175, -75 )
collision_mask = 2

[node name="Shoot-Cast-8" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 2

[node name="Look-Cast-0" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( -400, 0 )
collision_mask = 2

[node name="Look-Cast-1" type="RayCast2D" parent="Casts"]
position = Vector2( -5, -17 )
enabled = true
cast_to = Vector2( -375, -160 )
collision_mask = 2

[node name="Look-Cast-2" type="RayCast2D" parent="Casts"]
position = Vector2( -5, -17 )
enabled = true
cast_to = Vector2( -300, -300 )
collision_mask = 2

[node name="Look-Cast-3" type="RayCast2D" parent="Casts"]
position = Vector2( -3, -17 )
enabled = true
cast_to = Vector2( -145, -375 )
collision_mask = 2

[node name="Look-Cast-4" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 0, -400 )
collision_mask = 2

[node name="Look-Cast-5" type="RayCast2D" parent="Casts"]
position = Vector2( 3, -17 )
enabled = true
cast_to = Vector2( 145, -375 )
collision_mask = 2

[node name="Look-Cast-6" type="RayCast2D" parent="Casts"]
position = Vector2( 5, -17 )
enabled = true
cast_to = Vector2( 300, -300 )
collision_mask = 2

[node name="Look-Cast-7" type="RayCast2D" parent="Casts"]
position = Vector2( 5, -17 )
enabled = true
cast_to = Vector2( 375, -160 )
collision_mask = 2

[node name="Look-Cast-8" type="RayCast2D" parent="Casts"]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 2

[node name="Shoot_Spots" type="Node2D" parent="."]

[node name="Position2D-0" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 0, -17 )
rotation = 3.14159

[node name="Position2D-1" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( -5, -17 )
rotation = 3.53429

[node name="Position2D-2" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 0, -12 )
rotation = 2.35619
scale = Vector2( -1, 1 )

[node name="Position2D-3" type="Position2D" parent="Shoot_Spots"]
position = Vector2( -3, -17 )
rotation = 4.31969

[node name="Position2D-4" type="Position2D" parent="Shoot_Spots"]
visible = false
rotation = -1.5708

[node name="Position2D-5" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 3, -17 )
rotation = -1.1781

[node name="Position2D-6" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 0, -12 )
rotation = -0.785398

[node name="Position2D-7" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 5, -17 )
rotation = -0.392699

[node name="Position2D-8" type="Position2D" parent="Shoot_Spots"]
visible = false
position = Vector2( 0, -17 )

[node name="Timer_shoot" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shoot_0 = SubResource( 1 )
anims/Shoot_1 = SubResource( 2 )
anims/Shoot_2 = SubResource( 3 )
anims/Shoot_3 = SubResource( 4 )
anims/Shoot_4 = SubResource( 5 )
anims/Shoot_5 = SubResource( 6 )
anims/Shoot_6 = SubResource( 7 )
anims/Shoot_7 = SubResource( 8 )
anims/Shoot_8 = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -14 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Hit-Orange = SubResource( 11 )
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
